--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             height: 90%;
         }
         .imagebox img{
-        width: 100px;
+        width: 130px;
         padding-bottom: 1.2rem;
 
     }
@@ -159,7 +159,7 @@
     }
     @media only screen and (max-width: 610px){
         .imagebox img{
-        width: 100px;
+        width: 130px;
         padding-bottom: 1.2rem;
 
     }
@@ -198,7 +198,27 @@
                 width: 98%;
             }
             button{
-                width: 8rem;
+                width: 100%;
+            }
+        }
+        @media only screen and (max-width: 370px){
+            #boxL{
+                height:75%;
+                width: 98%;
+            }
+            button{
+                width: 100%;
+                padding: 10px 10px;
+            }
+        }
+        @media only screen and (max-width: 310px){
+            #boxL{
+                height:75%;
+                width: 98%;
+            }
+            button{
+                width: 100%;
+                padding: 7px 7px;
             }
         }
 
@@ -262,7 +282,7 @@
               <div class="outer-box">
                 <div class="icon-box">
                     <!-- <a href="https://sceecssc.onrender.com/" target="_blank"><img src="images/ssclogo.png"></a> -->
-                    <a href="https://www.manit.ac.in/" target="_blank"><img src="images/manit.png"></a>
+                    <!-- <a href="https://www.manit.ac.in/" target="_blank"><img src="images/manit.png"></a> -->
                 </div>
               </div>
             </div>
@@ -1176,7 +1196,7 @@
 
     <section class="sponsors-section-two" >
       <!-- Side Icons -->
-      <div class="auto-container">
+      <div class="auto-container" style="display: none;">
         <!-- Sec Title -->
 
         <div class="sec-title centered">
